--- a/.env.config
+++ b/.env.config
@@ -47,3 +47,21 @@
     "user": "$MONGO_USER",
     "connector": "mongodb"
   }
+
+
+
+    "Post": {
+    "dataSource": "mySqllocal",
+    "public": true
+  },
+
+    "mySqllocal": {
+    "host": "${MYSQL_L_HOST}",
+    "port": "${MYSQL_L_PORT}",
+    "url": "${MYSQL_L_URL}",
+    "database": "${MYSQL_L_DBNAME}",
+    "password": "${MYSQL_L_PASSWORD}",
+    "name": "mySqllocal",
+    "user": "${MYSQL_L_USER}",
+    "connector": "mysql"
+  },
