--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "engines": {
-    "node": "8.4.0"
+    "node": "7.10.0",
+    "npm": "4.2.0"
   },
   "scripts": {
     "lint": "eslint .",
