--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
   "restApiRoot": "/api",
   "host": "0.0.0.0",
-  "port": "${PORT}",
+  "port": "3003",
   "remoting": {
     "context": false,
     "rest": {
