--- a/.env.config
+++ b/.env.config
@@ -65,3 +65,14 @@
     "user": "${MYSQL_L_USER}",
     "connector": "mysql"
   },
+
+    "BaseUpload": {
+    "dataSource": "FileUpload",
+    "public": true
+  },
+    "FileUpload": {
+    "name": "FileUpload",
+    "connector": "loopback-component-storage",
+    "provider": "filesystem",
+    "root": "./storage"
+  }
