--- a/server/model-config.json
+++ b/server/model-config.json
@@ -26,10 +26,11 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "db",
+    "public": false
   },
   "AccessToken": {
-    "dataSource": "db",
+    "dataSource": "mongoNode",
     "public": false
   },
   "ACL": {
