add new features

--- a/.env
+++ b/.env
@@ -1,10 +1,27 @@
+MONGO_HOST_USER=ds147777.mlab.com
+MONGO_PORT_USER=47777
+MONGO_URL_USER=mongodb://tenm:kakarotto@ds147777.mlab.com:47777/telosma
+MONGO_DBNAME_USER=telosma
+MONGO_NAME_DATASOURCE_USER=mongo_user
+MONGO_USER_USER=tenm
+MONGO_PASSWORD_USER=kakarotto
+
 MONGO_HOST=ds159328.mlab.com
 MONGO_PORT=59328
 MONGO_URL=mongodb://dev:1223@ds159328.mlab.com:59328/dbnode
 MONGO_DBNAME=dbnode
-MONGO_NAME_DATASOURCE=mongoNode
+MONGO_NAME_DATASOURCE=mongo_base
 MONGO_USER=dev
 MONGO_PASSWORD=1223
+
+
+MONGO_HOST_SYSTEM=ds151222.mlab.com
+MONGO_PORT_SYSTEM=51222
+MONGO_URL_SYSTEM=mongodb://baseSystem:dGUubmcNCg@ds151222.mlab.com:51222/dbbase
+MONGO_DBNAME_SYSTEM=dbbase
+MONGO_NAME_DATASOURCE_SYSTEM=mongo_sys
+MONGO_USER_SYSTEM=baseSystem
+MONGO_PASSWORD_SYSTEM=dGUubmcNCg
 
 
 RABBITMQ_USER=wugaruqk
