--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "loopback-component-storage": "^3.3.1",
     "loopback-connector-mongodb": "^1.18.1",
     "loopback-connector-mysql": "^2.4.1",
+    "multer": "^1.3.0",
     "serve-favicon": "^2.4.5",
     "servicebus": "^2.0.10",
     "strong-error-handler": "^2.0.0"
