--- a/server/model-config.json
+++ b/server/model-config.json
@@ -99,5 +99,9 @@
   "BaseUpload": {
     "dataSource": "storage",
     "public": true
+  },
+  "Image": {
+    "dataSource": "mongo_base",
+    "public": true
   }
 }
