--- a/.env
+++ b/.env
@@ -38,6 +38,9 @@ EMAIL_TRANSPORTS_PORT=465
 EMAIL_AUTH_USER=0.suonglanh.0@gmail.com
 EMAIL_AUTH_PASS=1716171473
 
+CLOUDINARY_NAME=telosma
+CLOUDINARY_API_KEY=185362918485478
+CLOUDINARY_API_SECRET=97CGQGl4iIQ35AOWYpu_3u2S564
 
 
 MYSQL_L_HOST=localhost
