--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.9.0",
     "compression": "^1.7.1",
     "cors": "^2.5.2",
     "dotenv": "^4.0.0",
     "helmet": "^1.3.0",
-    "imgur": "^0.2.1",
     "loopback": "^3.14.0",
     "loopback-boot": "^2.6.5",
+    "loopback-component-cloudinary": "^0.1.1",
     "loopback-component-explorer": "^5.0.0",
     "loopback-component-storage": "^3.3.1",
     "loopback-connector-mongodb": "^1.18.1",
