--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-dropzone-component": "^2.0.0",
     "react-helmet": "^5.2.0",
     "react-modal": "^3.0.0",
     "react-redux": "^5.0.6",
