--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "loopback-connector-mongodb": "^1.18.1",
     "loopback-connector-mysql": "^2.4.1",
     "multer": "^1.3.0",
+    "react-dropzone-component": "^2.0.0",
     "serve-favicon": "^2.4.5",
     "servicebus": "^2.0.10",
     "strong-error-handler": "^2.0.0"
