--- a/.env
+++ b/.env
@@ -52,10 +52,10 @@ MYSQL_L_USER=teng
 MYSQL_L_PASSWORD=95manhte
 
 
-MYSQL_HOST=mysql8.db4free.net
+MYSQL_HOST=sql12.freesqldatabase.com
 MYSQL_PORT=3306
-MYSQL_URL=mysql://teng:95manhte@mysql8.db4free.net:3306/mynode
-MYSQL_DBNAME=mynode
+MYSQL_URL=mysql://sql12198724:jvrCnyuwrW@sql12.freesqldatabase.com:3306/sql12198724
+MYSQL_DBNAME=sql12198724
 MYSQL_NAME_DATASOURCE=mysqlNode
-MYSQL_USER=teng
-MYSQL_PASSWORD=95manhte
+MYSQL_USER=sql12198724
+MYSQL_PASSWORD=jvrCnyuwrW
