--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-MONGO_HOST_USER=ds147777.mlab.com
-MONGO_PORT_USER=47777
-MONGO_URL_USER=mongodb://tenm:kakarotto@ds147777.mlab.com:47777/telosma
-MONGO_DBNAME_USER=telosma
-MONGO_NAME_DATASOURCE_USER=mongo_user
-MONGO_USER_USER=tenm
-MONGO_PASSWORD_USER=kakarotto
+MONGO_HOST_SOCIAL=ds147777.mlab.com
+MONGO_PORT_SOCIAL=47777
+MONGO_URL_SOCIAL=mongodb://tenm:kakarotto@ds147777.mlab.com:47777/telosma
+MONGO_DBNAME_SOCIAL=telosma
+MONGO_NAME_DATASOURCE_SOCIAL=social
+MONGO_USER_SOCIAL=tenm
+MONGO_PASSWORD_SOCIAL=kakarotto
 
 MONGO_HOST=ds159328.mlab.com
 MONGO_PORT=59328
