--- a/server/model-config.json
+++ b/server/model-config.json
@@ -131,5 +131,9 @@
   "social_tags": {
     "dataSource": "social",
     "public": true
+  },
+  "social_albums": {
+    "dataSource": "social",
+    "public": true
   }
 }
