--- a/.env
+++ b/.env
@@ -52,10 +52,10 @@ MYSQL_L_USER=teng
 MYSQL_L_PASSWORD=95manhte
 
 
-MYSQL_HOST=sql12.freesqldatabase.com
+MYSQL_HOST=sql3.freesqldatabase.com
 MYSQL_PORT=3306
-MYSQL_URL=mysql://sql12198724:jvrCnyuwrW@sql12.freesqldatabase.com:3306/sql12198724
-MYSQL_DBNAME=sql12198724
+MYSQL_URL=mysql://sql3206273:rAG8BmNzfu@sql3.freesqldatabase.com:3306/sql3206273
+MYSQL_DBNAME=sql3206273
 MYSQL_NAME_DATASOURCE=mysqlNode
-MYSQL_USER=sql12198724
-MYSQL_PASSWORD=jvrCnyuwrW
+MYSQL_USER=sql3206273
+MYSQL_PASSWORD=rAG8BmNzfu
