--- a/.env.config
+++ b/.env.config
@@ -76,3 +76,15 @@
     "provider": "filesystem",
     "root": "./storage"
   }
+    "mysqlNode": {
+    "host": "${MYSQL_HOST}",
+    "port": "${MYSQL_PORT}",
+    "url": "${MYSQL_URL}",
+    "database": "${MYSQL_DBNAME}",
+    "password": "${MYSQL_PASSWORD}",
+    "name": "mysqlNode",
+    "user": "${MYSQL_USER}",
+    "connector": "mysql",
+    "connectTimeout": 20000,
+    "acquireTimeout": 20000
+  },
