--- a/.env.config
+++ b/.env.config
@@ -88,3 +88,13 @@
     "connectTimeout": 20000,
     "acquireTimeout": 20000
   },
+  "mysqlNodeLocal": {
+    "host": "localhost",
+    "port": 3306,
+    "url": "mysql://root:95manhte@localhost:3306/mynode",
+    "database": "mynode",
+    "password": "95manhte",
+    "name": "mysqlNodeLocal",
+    "user": "teng",
+    "connector": "mysql"
+  },
