--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.5.2",
     "dotenv": "^4.0.0",
     "helmet": "^1.3.0",
+    "lodash": "^4.17.4",
     "loopback": "^3.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
@@ -28,6 +29,7 @@
     "loopback-connector-mongodb": "^1.18.1",
     "loopback-connector-mysql": "^2.4.1",
     "multer": "^1.3.0",
+    "redis": "^2.8.0",
     "serve-favicon": "^2.4.5",
     "servicebus": "^2.0.10",
     "strong-error-handler": "^2.0.0"
