--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redis": "^2.8.0",
     "serve-favicon": "^2.4.5",
     "servicebus": "^2.0.10",
+    "socket.io": "^2.0.4",
     "strong-error-handler": "^2.0.0"
   },
   "devDependencies": {
